--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cssbeautify": "^0.3.1",
     "himalaya": "^1.1.0",
     "prettify-html": "^0.0.2",
     "react": "^16.8.6",
